--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "scavengr_rails_frontend",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "3.5",
+    "react-on-rails": "11.1.0-beta.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
