--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "react-on-rails": "11.1.0-beta.1"
   },
   "devDependencies": {
