--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "react-on-rails": "11.1.0-beta.1"
