--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "actioncable": "^5.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-react": "^6.24.1",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
-    "react-on-rails": "11.1.0-beta.1"
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "punycode": "^2.1.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-map-gl": "^3.3.2",
+    "react-on-rails": "11.1.0-beta.1",
+    "webpack": "^4.16.2",
+    "webpacker": "0.0.3"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^2.11.2"
   }
 }
