--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "react-dom": "^16.4.1",
     "react-map-gl": "^3.3.2",
     "react-on-rails": "11.1.0-beta.1",
-    "webpack": "^4.16.2",
-    "webpacker": "0.0.3"
+    "webpack": "^3.1.0",
+    "webpack-manifest-plugin": "^1.1.2",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^2.11.2"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "webpack-dev-server": "2.11.2"
   }
 }
