--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "actioncable": "^5.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react": "^6.24.1",
+    "jquery": "^3.3.1",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "moment": "^2.22.2",
